syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

enum RenewableAskType {
  UNKNOWN = 0;
  PRIMARY = 1;
  SECONDARY = 2;
}

message RenewableAsk {
  string id = 1;
  RenewableAskType type = 2;
  string account_id = 3;
  string price_ujpy = 4;
  string amount_uspx = 5;
  bool is_deleted = 6;
}
